--- a/pom.xml
+++ b/pom.xml
@@ -185,8 +185,20 @@
 
     <profiles>
         <profile>
+            <id>dev</id>
+            <properties>
+                <spring.profiles.active>dev</spring.profiles.active>
+            </properties>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
             <!-- Production mode is activated using -Pproduction -->
-            <id>production</id>
+            <id>prod</id>
+            <properties>
+                <spring.profiles.active>prod</spring.profiles.active>
+            </properties>
             <build>
                 <plugins>
                     <plugin>
