--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,1 @@
-server.port=${PORT:8080}
-logging.level.org.atmosphere = warn
-spring.mustache.check-template-location = false
-
-# Launch the default browser when starting the application in development mode
-vaadin.launch-browser=true
-# To improve the performance during development.
-# For more information https://vaadin.com/docs/flow/spring/tutorial-spring-configuration.html#special-configuration-parameters
-vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.yugabyte.app.messenger
-
-# JPA configuration
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.generate-ddl=false
-
-# PostgreSQL configuration.
-spring.datasource.url = jdbc:postgresql://localhost:5432/postgres?currentSchema=messenger
-spring.datasource.username = postgres
-spring.datasource.password = password
+spring.profiles.active=@spring.profiles.active@
