schema for geo-partitioned cluster

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -24,5 +24,8 @@ spring.datasource.password = password
 
 # YugabyteDB instance configuration
 # spring.datasource.url = jdbc:postgresql://127.0.0.1:5433/yugabyte
-# spring.datasource.username = postgres
-# spring.datasource.password = password
+# spring.datasource.username = yugabyte
+# spring.datasource.password = yugabyte
+
+# use this property for geo-partitioned YugabyteDB clusters
+# spring.datasource.hikari.connection-init-sql=SET force_global_transaction = TRUE;
