local cache for profiles and automatic schema creation

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,6 +12,11 @@ vaadin.whitelisted-packages = com.vaadin,org.vaadin,dev.hilla,com.yugabyte.app.m
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.generate-ddl=false
 
+# Schema initialization
+spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:messenger_schema.sql 
+spring.sql.init.continue-on-error=true
+
 # HikariCP configuration
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.schema=messenger
