supported Kong Gateway for inter-service communication

--- a/messenger/src/main/resources/application-dev.properties
+++ b/messenger/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
-service.uploader.path=http://localhost:8081/upload
+kong.attachments.gateway=http://localhost:8000/upload
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
