minio support and pictures in the chat

--- a/attachments/src/main/resources/application-dev.properties
+++ b/attachments/src/main/resources/application-dev.properties
@@ -1,3 +1,8 @@
 server.port=${PORT:8081}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
+
+object-storage.host=http://127.0.0.1
+object-storage.port=9100
+object-storage.user=minio_user
+object-storage.password=password
