--- a/attachments/src/main/resources/application-prod.properties
+++ b/attachments/src/main/resources/application-prod.properties
@@ -1,3 +1,8 @@
 server.port=${PORT}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
+
+object-storage.host=
+object-storage.port=
+object-storage.user=
+object-storage.password=
