Added support for Google Cloud Storage

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,4 @@ webpack.generated.js
 messenger/src/main/resources/application-personal.properties
 messenger/src/main/resources/root.crt
 gcloud/*.pem
+gcloud/google-storage-account-key.json
