--- a/attachments/src/main/resources/application-dev.properties
+++ b/attachments/src/main/resources/application-dev.properties
@@ -2,7 +2,14 @@ server.port=${PORT:8081}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
-object-storage.host=http://127.0.0.1
-object-storage.port=9100
-object-storage.user=minio_user
-object-storage.password=password
+#Either 'minio' or 'google-storage'
+object-storage.impl=minio
+
+#Minio-specific settings
+object-storage.minio.host=http://127.0.0.1
+object-storage.minio.port=9100
+object-storage.minio.user=minio_user
+object-storage.minio.password=password
+
+#Google Cloud Storage-specific settings
+#object-storage.google-storage.project-id=geo-distributed-messenger
