--- a/attachments/src/main/resources/application-prod.properties
+++ b/attachments/src/main/resources/application-prod.properties
@@ -2,7 +2,14 @@ server.port=${PORT}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
-object-storage.host=
-object-storage.port=
-object-storage.user=
-object-storage.password=
+#Either 'minio' or 'google-storage'
+object-storage.impl=${STORAGE_IMPL}
+
+#Minio-specific settings
+object-storage.minio.host=${STORAGE_MINIO_HOST}
+object-storage.minio.port=${STORAGE_MINIO_PORT}
+object-storage.minio.user=${STORAGE_MINIO_USER}
+object-storage.minio.password=${STORAGE_MINIO_PASSWORD}
+
+#Google Cloud Storage-specific settings
+object-storage.google-storage.project-id=${STORAGE_GOOGLE_PROJECT_ID}
