--- a/attachments/src/main/resources/application-dev.properties
+++ b/attachments/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-server.port=${PORT:8081}
+server.port=${ATTACHMENTS_SERVICE_PORT:8081}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
