--- a/attachments/src/main/resources/application-prod.properties
+++ b/attachments/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
-server.port=${PORT}
+server.port=${ATTACHMENTS_SERVICE_PORT:8081}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
 #Either 'minio' or 'google-storage'
-object-storage.impl=${STORAGE_IMPL}
+object-storage.impl=${ATTACHMENTS_SERVICE_STORAGE_IMPL}
 
 #Minio-specific settings
 object-storage.minio.host=${STORAGE_MINIO_HOST}
@@ -12,4 +12,4 @@ object-storage.minio.user=${STORAGE_MINIO_USER}
 object-storage.minio.password=${STORAGE_MINIO_PASSWORD}
 
 #Google Cloud Storage-specific settings
-object-storage.google-storage.project-id=${STORAGE_GOOGLE_PROJECT_ID}
+object-storage.google-storage.project-id=${ATTACHMENTS_SERVICE_GOOGLE_STORAGE_PROJECT_ID}
