--- a/messenger/src/main/resources/application-prod.properties
+++ b/messenger/src/main/resources/application-prod.properties
@@ -2,7 +2,7 @@ server.port=${PORT}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
-service.uploader.path=${SERVICE_UPLOADER_PATH}
+kong.attachments.gateway=${KONG_ATTACHMENTS_API_ROUTE}
 
 # Launch the default browser when starting the application in development mode
 vaadin.launch-browser=true
