updating google cloud config

--- a/attachments/src/main/resources/application-prod.properties
+++ b/attachments/src/main/resources/application-prod.properties
@@ -6,10 +6,10 @@ spring.mustache.check-template-location = false
 object-storage.impl=${ATTACHMENTS_SERVICE_STORAGE_IMPL}
 
 #Minio-specific settings
-object-storage.minio.host=${STORAGE_MINIO_HOST}
-object-storage.minio.port=${STORAGE_MINIO_PORT}
-object-storage.minio.user=${STORAGE_MINIO_USER}
-object-storage.minio.password=${STORAGE_MINIO_PASSWORD}
+#object-storage.minio.host=${STORAGE_MINIO_HOST}
+#object-storage.minio.port=${STORAGE_MINIO_PORT}
+#object-storage.minio.user=${STORAGE_MINIO_USER}
+#object-storage.minio.password=${STORAGE_MINIO_PASSWORD}
 
 #Google Cloud Storage-specific settings
 object-storage.google-storage.project-id=${ATTACHMENTS_SERVICE_GOOGLE_STORAGE_PROJECT_ID}
