--- a/messenger/src/main/resources/application-prod.properties
+++ b/messenger/src/main/resources/application-prod.properties
@@ -1,6 +1,7 @@
 server.port=${PORT}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 kong.attachments.gateway=${KONG_ATTACHMENTS_API_ROUTE}
 
