--- a/messenger/src/main/resources/application-dev.properties
+++ b/messenger/src/main/resources/application-dev.properties
@@ -1,6 +1,7 @@
 server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 kong.attachments.gateway=http://localhost:8000/upload
 
@@ -24,15 +25,15 @@ spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.schema=messenger
 
 # PostgreSQL configuration for local deployments
-#spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
-#spring.datasource.username = postgres
-#spring.datasource.password = password
+spring.datasource.url = jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username = postgres
+spring.datasource.password = password
 
 
 # YugabyteDB configuration for local deployments
-spring.datasource.url = jdbc:postgresql://127.0.0.1:5433/yugabyte
-spring.datasource.username = yugabyte
-spring.datasource.password = yugabyte
+# spring.datasource.url = jdbc:postgresql://127.0.0.1:5433/yugabyte
+# spring.datasource.username = yugabyte
+# spring.datasource.password = yugabyte
 
 # use this property for geo-partitioned YugabyteDB clusters
 # spring.datasource.hikari.connection-init-sql=SET force_global_transaction = TRUE;
