finished implementing dynamic data source

--- a/messenger/src/main/resources/application-dev.properties
+++ b/messenger/src/main/resources/application-dev.properties
@@ -29,10 +29,19 @@ spring.datasource.hikari.schema=messenger
 # spring.datasource.password = password
 
 
-YugabyteDB configuration for local deployments
+# YugabyteDB configuration for local deployments
 spring.datasource.url = jdbc:postgresql://127.0.0.1:5433/yugabyte
 spring.datasource.username = yugabyte
 spring.datasource.password = yugabyte
+
+# 
+# Optional property, adjust if you plan to change a database connection
+# dynamically in Google Cloud with Runtime Configurator.
+# The application recognizes the following property when connecting to a YugabyteDB data source:
+# * 'standard' - the data source is connected to a standard/regular node. 
+# * 'replica' - the connection goes via a replica node.
+# * 'geo' - the data source is connected to a geo-partitioned cluster.
+yugabytedb.connection.type=standard
 
 # use this property for geo-partitioned YugabyteDB clusters
 # spring.datasource.hikari.connection-init-sql=SET force_global_transaction = TRUE;
