--- a/messenger/src/main/resources/application-prod.properties
+++ b/messenger/src/main/resources/application-prod.properties
@@ -27,3 +27,13 @@ spring.datasource.hikari.schema=messenger
 spring.datasource.url = ${DB_URL}
 spring.datasource.username = ${DB_USER}
 spring.datasource.password = ${DB_PWD}
+
+# 
+# Optional property, set if you plan to change a database connection
+# dynamically in Google Cloud with Runtime Configurator.
+# The application recognizes the following property when connecting to a YugabyteDB data source:
+# * 'standard' - the data source is connected to a standard/regular node. 
+# * 'replica' - the connection goes via a replica node.
+# * 'geo' - the data source is connected to a geo-partitioned cluster.
+#
+yugabytedb.connection.type=standard
