added support for read replica connections

--- a/messenger/src/main/resources/application-dev.properties
+++ b/messenger/src/main/resources/application-dev.properties
@@ -2,6 +2,11 @@ server.port=${PORT:8080}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
+# Loggin all queries with their execution time
+logging.level.org.hibernate.stat=INFO
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
+
 kong.attachments.gateway=http://localhost:8000/upload
 
 # Launch the default browser when starting the application in development mode
@@ -42,6 +47,3 @@ spring.datasource.password = yugabyte
 # * 'replica' - the connection goes via a replica node.
 # * 'geo' - the data source is connected to a geo-partitioned cluster.
 yugabytedb.connection.type=standard
-
-# use this property for geo-partitioned YugabyteDB clusters
-# spring.datasource.hikari.connection-init-sql=SET force_global_transaction = TRUE;
