updated google cloud startup scripts

--- a/attachments/src/main/resources/application-prod.properties
+++ b/attachments/src/main/resources/application-prod.properties
@@ -12,4 +12,4 @@ object-storage.impl=${ATTACHMENTS_SERVICE_STORAGE_IMPL}
 #object-storage.minio.password=${STORAGE_MINIO_PASSWORD}
 
 #Google Cloud Storage-specific settings
-object-storage.google-storage.project-id=${ATTACHMENTS_SERVICE_GOOGLE_STORAGE_PROJECT_ID}
+object-storage.google-storage.project-id=${PROJECT_ID}
