--- a/messenger/src/main/resources/application-prod.properties
+++ b/messenger/src/main/resources/application-prod.properties
@@ -2,6 +2,11 @@ server.port=${PORT}
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
+# Loggin all queries with their execution time
+logging.level.org.hibernate.stat=INFO
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.generate_statistics=true
+
 kong.attachments.gateway=${KONG_ATTACHMENTS_API_ROUTE}
 
 # Launch the default browser when starting the application in development mode
@@ -36,4 +41,4 @@ spring.datasource.password = ${DB_PWD}
 # * 'replica' - the connection goes via a replica node.
 # * 'geo' - the data source is connected to a geo-partitioned cluster.
 #
-yugabytedb.connection.type=standard
+yugabytedb.connection.type=${DB_MODE}
