supported geo-partitioned clusters

--- a/messenger/src/main/resources/application-dev.properties
+++ b/messenger/src/main/resources/application-dev.properties
@@ -4,8 +4,8 @@ spring.mustache.check-template-location = false
 
 # Loggin all queries with their execution time
 logging.level.org.hibernate.stat=INFO
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.generate_statistics=true
+# spring.jpa.properties.hibernate.show_sql=true
+# spring.jpa.properties.hibernate.generate_statistics=true
 
 kong.attachments.gateway=http://localhost:8000/upload
 
@@ -21,6 +21,8 @@ spring.jpa.generate-ddl=false
 
 # Schema initialization
 spring.sql.init.mode=always
+
+# set the property to either `classpath:messenger_schema.sql` or `classpath:messenger_schema_partitioned.sql`
 spring.sql.init.schema-locations=classpath:messenger_schema.sql 
 spring.sql.init.continue-on-error=true
 
