--- a/messenger/src/main/resources/application-prod.properties
+++ b/messenger/src/main/resources/application-prod.properties
@@ -21,7 +21,9 @@ spring.jpa.generate-ddl=false
 
 # Schema initialization
 spring.sql.init.mode=always
-spring.sql.init.schema-locations=classpath:messenger_schema.sql 
+
+# set the property to either `classpath:messenger_schema.sql` or `classpath:messenger_schema_partitioned.sql`
+spring.sql.init.schema-locations=${DB_SCHEMA_FILE}
 spring.sql.init.continue-on-error=true
 
 # HikariCP configuration
