--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,4 @@ gcloud/instructions_private.md
 messenger/secret-gke.yaml
 messenger/deployment-gke.yaml
 attachments/deployment-gke.yaml
+commands.txt
