--- a/messenger/src/main/resources/application-prod.properties
+++ b/messenger/src/main/resources/application-prod.properties
@@ -4,7 +4,7 @@ spring.mustache.check-template-location = false
 
 # Loggin all queries with their execution time
 logging.level.org.hibernate.stat=INFO
-#spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.show_sql=true
 #spring.jpa.properties.hibernate.generate_statistics=true
 
 kong.attachments.gateway=${KONG_ATTACHMENTS_API_ROUTE}
