--- a/messenger/secret-gke-template.yaml
+++ b/messenger/secret-gke-template.yaml
@@ -7,3 +7,8 @@ stringData:
   url: "YUGABYTEDB_URL"
   user: "YUGABYTEDB_USERNAME"
   password: "YUGABYTEDB_PASSWORD"
+  #YugabyteDB deployment type - standard, replica or geo
+  type: "standard"
+  # database schema
+  # `classpath:messenger_schema.sql` or `classpath:messenger_schema_partitioned.sql`
+  schema: "classpath:messenger_schema.sql"
